# parakeet-cpp

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SPIKE-RESULTS.md
.github/workflows/: ci.yml
eval/: README.md
eval/refs/: sentence_01.txt  sentence_02.txt  sentence_03.txt  sentence_04.txt
parakeet-cpp/: Cargo.toml  build.rs
parakeet-cpp-sys/: Cargo.toml  build.rs  wrapper.h
parakeet-cpp-sys/patches/ggml/: 0001-dl-load-global.patch
parakeet-cpp-sys/patches/parakeet/: 0001-backend-dl.patch
parakeet-cpp-sys/src/: lib.rs
parakeet-cpp/examples/: spike.rs
parakeet-cpp/src/: error.rs  lib.rs  model.rs  options.rs  stream.rs
parakeet-cpp/tests/: dl_metal.rs  integration.rs  prefix.rs
