[package]
name = "parakeet-cpp-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
links = "parakeet"
description = "Low-level FFI bindings to mudler/parakeet.cpp (ggml) — builds the vendored C/C++ via cmake + bindgen"
keywords = ["asr", "parakeet", "ggml", "ffi", "sys"]
categories = ["external-ffi-bindings"]

[build-dependencies]
cmake = "0.1"
bindgen = "0.70"
# Clean Windows path canonicalization (no `\\?\` verbatim prefix) so `git apply`
# and cmake accept the vendored-source paths.
dunce = "1"

[features]
default = []
metal = []
vulkan = []
cuda = []
hip = []
# Build ggml backends as loadable modules (dlopen'd at runtime) and link the
# shared core instead of a fully static binary. See build.rs `dl` branch.
dynamic-backends = []
