[package]
name = "parakeet-cpp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
parakeet-cpp-sys = { path = "../parakeet-cpp-sys" }
thiserror = "2"

[features]
default = []
metal = ["parakeet-cpp-sys/metal"]
vulkan = ["parakeet-cpp-sys/vulkan"]
cuda = ["parakeet-cpp-sys/cuda"]
hip = ["parakeet-cpp-sys/hip"]

[dev-dependencies]
hound = "3"
